# averter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yaml  build.rs  manifest.yaml
.cargo/: config.toml
crates/averter/: Cargo.toml  build.rs
crates/averter/src/: main.rs  utility.rs
crates/averter/src/routes/: mod.rs
crates/averter/src/routes/package/: lookup.rs  multi_lookup.rs  search.rs
crates/averter/src/routes/repository/: mod.rs  safety.rs  search_ranking.rs
crates/averter/src/routes/utility/: health.rs  index.rs  mod.rs  not_found.rs
crates/averter/src/utility/: api.rs  http.rs  lru.rs  mod.rs  runtime.rs
crates/deploy/: Cargo.toml
crates/deploy/src/: main.rs
crates/manifest/src/: lib.rs
deploy/: Cargo.toml
kubernetes/: averter.yaml  ingress.yaml
src/: main.rs  utility.rs
src/routes/: mod.rs
src/routes/package/: lookup.rs  multi_lookup.rs  search.rs
src/routes/repository/: safety.rs  search_ranking.rs
src/routes/utility/: health.rs  index.rs  mod.rs
